--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: test project
+name: deploy project
 on: push
 jobs:
   test:
@@ -7,11 +7,27 @@ jobs:
       - name: get code
         uses: actions/checkout@v3
       - name: install node
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
           node-version: 18
       - name: install dependecies
         run: npm ci
       - name: run tests
         run: npm test
+  deploy:
+    runs-on: ubuntu-latest
+    steps:
+      - name: get code
+        uses: actions/checkout@v3
+      - name: install node
+        uses: actions/setup-node@v4
+        with:
+          node-version: 18
+      - name: install dependecies
+        run: npm ci
+      - name: build the project
+        run: npm run build
+      - name: deploy
+        run: echo "Deployng..."
+
 
