--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,5 +1,5 @@
 name: deploy project
-on: push
+on: [push, workflow_dispatch]
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -14,15 +14,8 @@ jobs:
         run: npm ci
       - name: run tests
         run: npm test
-  security:
-    runs-on: ubuntu-latest
-    steps:
-      - name: get code
-        uses: actions/checkout@v3
-      - name: install dependecies
-        run: echo "security check"
   deploy:
-    needs: [test, security]
+    needs: test
     runs-on: ubuntu-latest
     steps:
       - name: get code
